tests/analyzer/errors/unknown_field.rv
struct Person {
    age: int,
}

fn main() {
    var tom = Person.{agge = 4}
}

